<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:padding="32dp">


        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_create"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#2E7D32"
            android:layout_marginBottom="24dp" />


        <EditText
            android:id="@+id/fullnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_fullname"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:padding="14dp"
            android:backgroundTint="#A5D6A7"
            android:textColor="#000000"
            android:textColorHint="@color/green_light"
            android:layout_marginBottom="12dp" />


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:padding="14dp"
            android:backgroundTint="#A5D6A7"
            android:textColor="#000000"
            android:textColorHint="@color/green_light"
            android:layout_marginBottom="12dp" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="14dp"
            android:backgroundTint="#A5D6A7"
            android:textColor="#000000"
            android:textColorHint="@color/green_light"
            android:layout_marginBottom="12dp" />


        <EditText
            android:id="@+id/register_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_confirm"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="14dp"
            android:backgroundTint="#A5D6A7"
            android:textColor="#000000"
            android:textColorHint="@color/green_light"
            android:layout_marginBottom="20dp" />

        <RadioGroup
            android:id="@+id/userTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radioVolunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volunteer"
                android:checked="true"
                android:buttonTint="@color/green_light"
                />

            <RadioButton
                android:id="@+id/radioOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Organization"
                android:buttonTint="@color/green_light"
                />
        </RadioGroup>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_signup"
            android:textColor="@android:color/white"
            android:backgroundTint="#4CAF50"
            android:padding="12dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>